# backend/api/api/main.py
@@ -72,9 +72,9 @@ def get_metics():
         "total_bankroll": sum(
             float(account["account_balance"]) for account in db["accounts"]
         ),
-        "current_share_price": "11.98",
-        "initial_share_price": "10.00",
-        "shares_owned": sum(
+        "current_share_price": 11.98,
+        "initial_share_price": 10.00,
+        "total_shares": sum(
             float(account["shares_owned"]) for account in db["accounts"]
         ),
     }
